
========== version history of String::Print

All modifications where created by Mark Overmeer, unless explicitly
stated differently.

version 0.96:

version 0.95: Mon  8 Sep 14:06:53 CEST 2025

	Changes:
	- require 5.16

	Fixes:
	- printp formats which start with a '%' were not processed

	Improvements:
	- modifier HTML
	- add .gitignore
	- convert to OODoc 3.03

version 0.94: Sun  1 Mar 12:37:41 CET 2020

	Fixes:
	- fix metadata [Mohammad S Anwar]
	- test failed when year with blanks [cpantesters]

version 0.93: Tue Jan 23 22:08:31 CET 2018

	Improvements:
	- convert to GIT
	- publish via GitHUB

version 0.92: Thu  6 Jul 12:31:36 CEST 2017

	Fixes:
	- %F and %T not supported on Windows [cpantesters]

version 0.91: Tue 27 Jun 17:10:58 CEST 2017

	Improvements:
	- add output encoding (encodeFor)
	- add complex keys
	- add modifier BYTES
	- add time modifiers
	- add default modifier '//'
	- add new(missing_key) with warning

version 0.90: Wed 14 Jun 14:47:03 CEST 2017

	Improvements:
	- spell-fix rt.cpan.org#96464 [Gregor Herrmann, Debian]

version 0.15: Fri Mar 14 09:06:18 CET 2014

	Fixes:
	- t/11modif.t regression test, where float may get ',' under
	  some locales [cpantesters]

version 0.14: Mon Mar 10 16:11:30 CET 2014

	Improvements:
	- changed documentation style

version 0.13: Sun Jan  5 16:51:09 CET 2014

	Improvements:
	- docs: fune-tuning
	- serializer for SCALAR
	- accept blanks around names of interpolated variable names
	- accept digits in variable names, not as first character.

version 0.12: Mon Apr 29 09:16:23 CEST 2013

	Changes:
	- %c --> %S [Amsterdam Perl Mongers]

	Improvements:
	- docs: correct syntax for links to alternative modules.
	- docs: PND -> GBP [H.Merijn Brand]

version 0.11: Tue Apr 16 12:27:54 CEST 2013

	Fixes:
	- require perl 5.10 for '//' operator [cpantesters]
	- fix tests to use gmtime, not localtime [cpantesters]
	- some documentation layout improvements [search.cpan.org]