@@ -6,6 +6,9 @@ stated differently.
 
 version 0.96:
 
+	Improvements:
+	- thousands markers in %d
+
 version 0.95: Mon  8 Sep 14:06:53 CEST 2025
 
 	Changes:
